Some fixes to make the client compatible with Java 1.8